Solution files updated

--- a/.gitignore
+++ b/.gitignore
@@ -396,5 +396,4 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
-src/client/Pg.LetsExercise.WebResources/WebResources/scripts/Main.js
-src/client/Pg.LetsExercise.WebResources/WebResources/scripts/maps/Main.js.map
+src/client/Pg.LetsExercise.WebResources/WebResources/scripts/** 
