--- a/src/client/Pg.LetsExercise.WebResources/package.json
+++ b/src/client/Pg.LetsExercise.WebResources/package.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/eslint-plugin": "^4.30.0",
         "@typescript-eslint/parser": "^4.30.0",
         "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^12.0.2",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
