--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  checks: write  # Allows writing test reports
+  pull-requests: write  # Allows reporting results on PRs
+  
 jobs:
   build:
 
