--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -22,6 +22,8 @@ jobs:
       SOLUTION_PATH: src\server\Pg.LetsExercise\Pg.LetsExercise.sln
       TEST_ASSEMBLY_PATH: src\server\Pg.LetsExercise\**\bin\Release\*.Tests.dll
       VSTEST_CONSOLE: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe
+      PP_SOLUTION_NAME: LetsExercise
+      PP_MAPPINGS_FILE: lets-exercise-mappings.xml
 
     steps:
       - name: Checkout repository
@@ -53,3 +55,26 @@ jobs:
           name: xUnit Test Results
           path: "**/*.trx"
           reporter: dotnet-trx
+
+      - name: Pack Unmanaged Solution
+        run: |
+          mkdir -p artifacts/unmanaged
+          pac solution pack --zipfile artifacts/unmanaged/${{ env.PP_SOLUTION_NAME }}_unmanaged.zip --folder solutions --packagetype Unmanaged --map ${{ env.PP_MAPPINGS_FILE }}
+
+      - name: Pack Managed Solution
+        run: |
+          mkdir -p artifacts/managed
+          pac solution pack --zipfile artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip --folder solutions --packagetype Managed --map ${{ env.PP_MAPPINGS_FILE }}
+
+      - name: Upload Unmanaged Solution Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: unmanaged-solution
+          path: artifacts/unmanaged/${{ env.PP_SOLUTION_NAME }}_unmanaged.zip
+
+      - name: Upload Managed Solution Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: managed-solution
+          path: artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip
+
