Update server-build.yml to trigger builds on feature/power-platform-build branch

--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -5,7 +5,7 @@ name: .NET-Server-Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feature/power-platform-build" ]
   pull_request:
     branches: [ "main" ]
 
