--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -38,39 +38,6 @@ jobs:
       - name: Install Power Platform Tools
         uses: microsoft/powerplatform-actions/actions-install@v1
 
-      # hack, but necessary until GitHub Actions for Power Platform support all pac commands
-      - if: ${{ false }} # this will never run, but will force powerplatform-actions to download
-        name: force-pac-download
-        uses: microsoft/powerplatform-actions/unpack-solution@latest
-        with:
-          solution-file: fake.zip
-          solution-folder: fake
-
-      - name: Set PAC path
-        shell: pwsh
-        run: |
-          $actionsPath = "${{ runner.temp }}".Replace("_temp","_actions")
-          Write-Host "Actions Path: $actionsPath"
-          if ($env:RUNNER_OS -eq "Windows") {
-            Write-Host "Actions executed on Windows"
-            $array1 = Get-ChildItem $actionsPath -Recurse
-             Write-Host "Contents of array1:"
-            $array1 | ForEach-Object { Write-Host $_.FullName }         
-            $array = Get-ChildItem $actionsPath -Recurse | Where-Object{$_.FullName.EndsWith('pac\tools\pac.exe')}
-          }
-          else {
-            $array = Get-ChildItem $actionsPath -Recurse | Where-Object{$_.FullName.EndsWith('pac_linux/tools/pac')}
-          }
-          if ($array -eq $null -or $array.Count -eq 0) {
-            Write-Error "PAC executable not found"
-            exit 1
-          }
-          $pacPath = $array[0].Directory.FullName
-          Write-Host "PAC Path: $pacPath"
-          echo "$pacPath" >> $env:GITHUB_PATH
-          echo "##vso[task.setvariable variable=PATH]$pacPath;$env:PATH"
-
-
       - name: Restore NuGet packages
         run: nuget restore ${{ env.SOLUTION_PATH }}
 
@@ -93,14 +60,18 @@ jobs:
           reporter: dotnet-trx
 
       - name: Pack Unmanaged Solution
-        run: |
-          mkdir -p artifacts/unmanaged
-          pac solution pack --zipfile artifacts/unmanaged/${{ env.PP_SOLUTION_NAME }}_unmanaged.zip --folder solutions --packagetype Unmanaged --map ${{ env.PP_MAPPINGS_FILE }}
+        uses: microsoft/powerplatform-actions/pack-solution
+        with:
+          solution-folder: solutions/${{ env.PP_SOLUTION_NAME }}
+          solution-file: artifacts/unmanaged/${{ env.PP_SOLUTION_NAME }}_unmanaged.zip
+          solution-type: Unmanaged
 
       - name: Pack Managed Solution
-        run: |
-          mkdir -p artifacts/managed
-          pac solution pack --zipfile artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip --folder solutions --packagetype Managed --map ${{ env.PP_MAPPINGS_FILE }}
+        uses: microsoft/powerplatform-actions/pack-solution
+        with:
+          solution-folder: solutions/${{ env.PP_SOLUTION_NAME }}_managed
+          solution-file: artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip
+          solution-type: Managed
 
       - name: Upload Unmanaged Solution Artifact
         uses: actions/upload-artifact@v4
