--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -23,7 +23,7 @@ jobs:
       TEST_ASSEMBLY_PATH: src\server\Pg.LetsExercise\**\bin\Release\*.Tests.dll
       VSTEST_CONSOLE: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe
       PP_SOLUTION_NAME: LetsExercise
-      PP_MAPPINGS_FILE: lets-exercise-mappings.xml
+      PP_MAPPINGS_FILE: infrastructure\configs\lets-exercise-mappings.xml
 
     steps:
       - name: Checkout repository
@@ -65,6 +65,7 @@ jobs:
           solution-folder: solutions/${{ env.PP_SOLUTION_NAME }}
           solution-file: artifacts/unmanaged/${{ env.PP_SOLUTION_NAME }}_unmanaged.zip
           solution-type: Unmanaged
+          map-file: ${{ env.PP_MAPPINGS_FILE }}
 
       - name: Pack Managed Solution
         uses: microsoft/powerplatform-actions/pack-solution@v1
@@ -72,6 +73,7 @@ jobs:
           solution-folder: solutions/${{ env.PP_SOLUTION_NAME }}_managed
           solution-file: artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip
           solution-type: Managed
+          map-file: ${{ env.PP_MAPPINGS_FILE }}
 
       - name: Upload Unmanaged Solution Artifact
         uses: actions/upload-artifact@v4
