--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -21,6 +21,8 @@ jobs:
     env:
       SOLUTION_PATH: src\server\Pg.LetsExercise\Pg.LetsExercise.sln
       TEST_ASSEMBLY_PATH: src\server\Pg.LetsExercise\**\bin\Release\*.Tests.dll
+      WEB_RESOURCE_FOLDER: src\client\Pg.LetsExercise.WebResources  
+      CIRCLE_PROGRESS_CONTROL_FOLDER: src\client\Pg.LetsExercise.CircleProgressControl
       VSTEST_CONSOLE: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe
       PP_SOLUTION_NAME: LetsExercise
       PP_MAPPINGS_FILE: infrastructure\configs\letsexercise-mappings.xml
@@ -38,6 +40,31 @@ jobs:
       - name: Install Power Platform Tools
         uses: microsoft/powerplatform-actions/actions-install@v1
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install npm dependencies (WR)
+        run: |
+          cd ${{env.WEB_RESOURCE_FOLDER}}
+          npm install
+
+      - name: Build npm project (WR)
+        run: |
+          cd ${{env.WEB_RESOURCE_FOLDER}}
+          npm run build
+  
+      - name: Install npm dependencies (PCF)
+        run: |
+          cd ${{env.WEB_RESOURCE_FOLDER}}
+          npm install
+
+      - name: Build npm project (PCF)
+        run: |
+          cd ${{env.WEB_RESOURCE_FOLDER}}
+          npm run build
+          
       - name: Restore NuGet packages
         run: nuget restore ${{ env.SOLUTION_PATH }}
 
