Update server-build.yml to change directory for npm build step

--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build npm project (PCF)
         run: |
-          cd ${{env.WEB_RESOURCE_FOLDER}}
+          cd ${{env.CIRCLE_PROGRESS_CONTROL_FOLDER}}
           npm run build
           
       - name: Restore NuGet packages
