--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -57,7 +57,7 @@ jobs:
   
       - name: Install npm dependencies (PCF)
         run: |
-          cd ${{env.WEB_RESOURCE_FOLDER}}
+          cd ${{env.CIRCLE_PROGRESS_CONTROL_FOLDER}}
           npm install
 
       - name: Build npm project (PCF)
