Add PAC CLI path setup

--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -44,6 +44,15 @@ jobs:
       - name: Install Power Platform Tools
         uses: microsoft/powerplatform-actions/actions-install@v1
 
+      - name: Set PAC CLI Path
+        shell: pwsh
+        run: |
+          $actionsPath = "${{ runner.temp }}".Replace("_temp","_actions")
+          Write-Host "Actions Path: $actionsPath"
+          $pacPath = Get-ChildItem -Path $actionsPath -Recurse -Filter "pac.exe" | Select-Object -First 1 -ExpandProperty Directory
+          Write-Host "PAC Path: $pacPath"
+          echo "$pacPath" >> $env:GITHUB_PATH
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
