--- a/.github/workflows/server-build.yml
+++ b/.github/workflows/server-build.yml
@@ -26,9 +26,9 @@ jobs:
       VSTEST_CONSOLE: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\TestPlatform\vstest.console.exe
       PP_SOLUTION_NAME: LetsExercise
       PP_MAPPINGS_FILE: infrastructure\configs\letsexercise-mappings.xml
-      CANVASAPP_UNMANAGED_SOURCE_FOLDER: solutions\LetsExercise\CanvasApps
+      CANVASAPP_UNMANAGED_SOURCE_FOLDER: solutions\LetsExercise\CanvasApps\pg_exercisetabnewrecord_ebc36_DocumentUri
       CANVASAPP_UNMANAGED_OUTPUT_FILE: solutions\LetsExercise\CanvasApps\pg_exercisetabnewrecord_ebc36_DocumentUri.msapp
-      CANVASAPP_MANAGED_SOURCE_FOLDER: solutions\LetsExercise_managed\CanvasApps
+      CANVASAPP_MANAGED_SOURCE_FOLDER: solutions\LetsExercise_managed\CanvasApps\pg_exercisetabnewrecord_ebc36_DocumentUri
       CANVASAPP_MANAGED_OUTPUT_FILE: solutions\LetsExercise_managed\CanvasApps\pg_exercisetabnewrecord_ebc36_DocumentUri.msapp
 
     steps:
@@ -127,12 +127,6 @@ jobs:
           solution-file: artifacts/managed/${{ env.PP_SOLUTION_NAME }}_managed.zip
           solution-type: Managed
           map-file: ${{ env.PP_MAPPINGS_FILE }}
-
-      - name: Upload Canvas App Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: canvas-app
-          path: artifacts/canvas-app/LetsExercise_CanvasPss.msapp
 
       - name: Upload Unmanaged Solution Artifact
         uses: actions/upload-artifact@v4
