Add workflows for building and packing Power Platform solutions for main branch

--- a/.github/workflows/main-branch-build.yml
+++ b/.github/workflows/main-branch-build.yml
@@ -5,7 +5,7 @@ name: .NET-Server-Build
 
 on:
   push:
-    branches: [ "feature/power-platform-build" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
