--- a/.github/workflows/feature-branch-build.yml
+++ b/.github/workflows/feature-branch-build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project and pack Power Platform solutions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET-Server-Build
+name: Feature-Branch-Build
 
 on:
   push:
